playlist html 틀 2024.05.23 1. playlist html 틀 작성

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,13 @@
 # custom
 .python-version
 config.py
+static/css/playlist.css
+
 
 
 ### Django ###
 *.log
-*.pot
+*.pot    
 *.pyc
 __pycache__/
 local_settings.py
