--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,13 @@
 # custom
 .python-version
 config.py
+output/
+
 
 
 ### Django ###
 *.log
-*.pot
+*.pot    
 *.pyc
 __pycache__/
 local_settings.py
