--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,22 @@ services:
     command: gunicorn --workers=3 --timeout=300 WhateverSong.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     env_file:
       - .env
     depends_on:
       - db
       - redis
+
+  nginx:
+  image: nginx:latest
+  volumes:
+    - ./nginx.conf:/etc/nginx/conf.d/default.conf
+  ports:
+    - "80:80"
+  depends_on:
+    - web
 
   db:
     image: postgres:15
