--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     server_name 3.38.218.187;
 
+    client_max_body_size 100M;
+
     location / {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
