--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,17 @@ services:
     depends_on:
       - db
       - redis
+    environment:
+      - DJANGO_SETTINGS_MODULE=WhateverSong.settings
 
   nginx:
-  image: nginx:latest
-  volumes:
-    - ./nginx.conf:/etc/nginx/conf.d/default.conf
-  ports:
-    - "80:80"
-  depends_on:
-    - web
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "80:80"
+    depends_on:
+      - web
 
   db:
     image: postgres:15
