--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 3.38.218.187;
+    server_name whateversong.com;
 
     client_max_body_size 50M;
 
@@ -10,5 +10,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;        
+
+	#timeout
+	proxy_connect_timeout	600s;
+	proxy_send_timeout	600s;
+	proxy_read_timeout	600s;
+	send_timeout		600s;
     }
 }
